fix svg overlap issue

--- a/src/styles/sections/solutions.scss
+++ b/src/styles/sections/solutions.scss
@@ -110,6 +110,11 @@
 
         @screen sm {
           width: 30px;
+
+          * {
+            max-width: 100%;
+            height: auto;
+          }
         }
       }
 
